[refactor] Course 도메인 리팩토링 및 테스트 코드 작성 (#252)
* refactor(course): DTO 구조 개편 및 생성 로직 통합

- Class 기반 DTO를 Record로 전면 교체 및 Converter 제거
- 매핑 로직(toEntity, from)을 DTO 내부로 이관하여 응집도 향상
- AI 및 DIY 코스 생성 로직을 하나로 통합 (createCourse)
- CourseDetailResponse 내 Inner Record 도입으로 구조 최적화

* refactor(course): Course DTO 레코드 전환 및 API 타입 안전성 강화

- CourseUpdateRequest, CourseRecommendationResponse를 Record로 전환하여 불변 객체 사용
- CourseController 및 CourseService의 조회 API 파라미터를 String에서 CourseType Enum으로 변경하여 타입 안전성 확보 (프론트엔드 통신 스펙 유지)
- CourseService 내 DTO Getter 호출 방식 수정 (get 접두사 제거) 및 관련 로직 정리
- 추천 코스 매핑 로직을 CourseRecommendationResponse::from Factory Method로 통일 및 오버로딩 적용

* refactor(course): CourseType enum 저장 방식 단순화

- CourseTypeConverter 제거
- CourseType enum에서 value 필드 및 getter 제거
- @Enumerated(EnumType.STRING) 적용하여 "AI", "DIY" 직접 저장
- 불필요한 변환 로직 제거로 코드 가독성 향상

* refactor(course): Setter를 도메인 메서드로 변경

- Course 엔티티의 모든 Setter 제거
- 의미있는 도메인 메서드 추가 (updateCourseName, updateCourseDescription, updateCourseImage, updateRecommendTime, updateRating, markAsReviewed, increaseParticipants)
- CourseService, CourseReviewService, PlaceReviewService, PlaceVisitService 수정
- 비즈니스 로직을 도메인 레이어로 이동하여 캡슐화 강화

* refactor(course): AI 코스 생성 리팩토링 및 DTO record화

- DALL-E 이미지 생성 기능 제거, GptCourseInfoResponse에서 courseImage 필드 제거
- GptCourseInfoResponse, GptPlaceInfoResponse record로 변환
- 카테고리 한글 변환을 위한 GptPlaceInfoDto 추가 (QueryDSL용)
- 홈 화면 추천 코스 저장 후 Course 엔티티에서 재조회하도록 변경

* refactor(course): CourseService 역할 분리 (AI 생성 및 추천 로직 격리)

- 비대해진 CourseService를 비즈니스 관심사에 따라 3개의 서비스로 분리하여 유지보수성 및 응집도 향상
  1. AICourseGenerationService: GPT API 통신, 프롬프트 생성, AI 코스 데이터 파싱 및 저장 전담
  2. CourseRecommendationService: 홈 화면 추천 로직, 인기 코스 조회, Redis 캐싱 및 스케줄러 연동 전담
  3. CourseService: 코스 기본 CRUD(생성, 수정, 삭제) 및 상세 조회 전담

- CourseController의 의존성 주입 구조 변경: 단일 서비스 의존에서 각 기능별 전담 서비스 주입으로 변경
- 순환 참조 방지를 위해 서비스 간 호출 구조 개선 (RecommendationService -> AIGenerationService 단방향 호출)

* refactor(course): AI 생성 서비스 책임 분리 및 구조 개선

- `AICourseGenerationService`의